<resources>
    <string name="app_name">Inventario</string>

    <!-- Formulario Producto -->
    <string name="hint_nombre">Nombre:</string>
    <string name="hint_marca">Marca:</string>
    <string name="hint_cantidad">Cantidad:</string>
    <string name="hint_precio">Precio por unidad:</string>
    <string name="hint_precio_lista">Precio/unidad:</string>
    <string name="hint_tienda">Tienda:</string>
    <string name="hint_categoria">Categoría:</string>
    <string name="hint_imagen">URL de la imagen:</string>
    <string name="hint_para_comprar">¿Es para comprar?</string>

    <!-- Formulario Libro -->
    <string name="hint_titulo">Título:</string>
    <string name="hint_author">Autor:</string>
    <string name="hint_editorial">Editorial:</string>
    <string name="hint_genero">Género:</string>
    <string name="hint_isbn">ISBN:</string>
    <string name="hint_impresion">Impreso en:</string>
    <string name="hint_impresion_lugar">Lugar de impresión:</string>
    <string name="hint_impresion_fecha">Año de impresión:</string>

    <!-- Formulario Juego -->
    <string name="hint_tipo_juego">Tipo de juego:</string>
    <string name="hint_num_jugadores">Número de jugadores:</string>

    <!-- Formulario Multimedia -->
    <string name="hint_director">Director:</string>
    <string name="hint_artista">Artista o Grupo:</string>
    <string name="hint_fecha_estreno">Fecha de Estreno:</string>
    <string name="hint_fecha_lanzamiento">Fecha de Lanzamiento:</string>
    <string name="hint_min_duracion">Duración:</string>

    <!-- Formulario Ropa -->
    <string name="hint_tipo_ropa">Tipo de ropa:</string>
    <string name="hint_color">Color:</string>
    <string name="hint_talla">Talla o Tamaño:</string>
    <string name="hint_estado">Estado:</string>
    <string name="textil_hogar">Textil Hogar</string>

    <!-- Campos obligatorios -->
    <string name="oblig_name">Nombre: *</string>
    <string name="oblig_amount">Cantidad: *</string>
    <string name="oblig_shop">Tienda: *</string>
    <string name="oblig_category">Categoría: *</string>
    <string name="oblig_title">Título: *</string>
    <string name="oblig_author">Autor: *</string>
    <string name="oblig_editorial">Editorial: *</string>
    <string name="oblig_genre">Género: *</string>
    <string name="oblig_brand">Marca: *</string>
    <string name="oblig_type">Tipo de juego: *</string>
    <string name="oblig_director">Director: *</string>
    <string name="oblig_artist">Artista o Grupo: *</string>
    <string name="oblig_tipo_ropa">Tipo de ropa: *</string>

    <!-- Botones con texto -->
    <string name="terminar_compra">Terminar compra</string>
    <string name="btn_new_product">Agregar nuevo producto</string>
    <string name="btn_product_list">Ver lista completa de productos</string>
    <string name="btn_new_category">Añadir nueva categoría</string>
    <string name="btn_new_genre">Añadir nuevo género</string>
    <string name="btn_new_book">Agregar nuevo libro</string>
    <string name="btn_book_list">Ver lista completa de libros</string>
    <string name="btn_new_type_game">Añadir nuevo tipo de juevo</string>
    <string name="btn_new_game">Agregar nuevo juego</string>
    <string name="btn_game_list">Ver lista completa de juegos</string>
    <string name="btn_new_film">Agregar nueva película</string>
    <string name="btn_new_disc">Agregar nuevo disco de música</string>
    <string name="btn_films">PELÍCULAS</string>
    <string name="btn_discs">DISCOS DE MÚSICA</string>
    <string name="btn_ropa">ARMARIO</string>
    <string name="btn_textil">TEXTIL HOGAR</string>
    <string name="btn_new_clothes">Agregar nuevo textil</string>
    <string name="btn_new_type_clothes">Añadir nuevo tipo de textil</string>
    <string name="btn_clothes_list">Ver lista completa de ropa</string>

    <!-- Menú principal -->
    <string name="menu_lista_compra">Lista de la Compra</string>
    <string name="menu_lista_productos">Gestión de Productos</string>
    <string name="menu_lista_libros">Gestión de Libros</string>
    <string name="menu_lista_juegos">Gestión de Juegos</string>
    <string name="menu_lista_multimedia">Gestión Multimedia</string>
    <string name="menu_lista_pelicula">Gestión de Películas</string>
    <string name="menu_lista_disco">Gestión de Discos de Música</string>
    <string name="menu_lista_textil">Gestión Textil</string>
    <string name="funcionamiento">Funcionamiento de la App</string>

    <string name="moneda">€</string>
    <string name="separator">|</string>
    <string name="min">minutos</string>

</resources>