<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuFuncionamiento"
        android:title="@string/funcionamiento"
        android:icon="?android:attr/actionModeFindDrawable"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuListaCompra"
        android:title="@string/menu_lista_compra"
        android:icon="@drawable/carritocompra"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuGestionProductos"
        android:title="@string/menu_lista_productos" />

    <item
        android:id="@+id/menuGestionLibros"
        android:title="@string/menu_lista_libros" />

    <item
        android:id="@+id/menuGestionJuegos"
        android:title="@string/menu_lista_juegos" />

    <item
        android:id="@+id/menuGestionMultimedia"
        android:title="@string/menu_lista_multimedia" />
</menu>