<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewNombre"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/viewCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_cantidad"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:labelFor="@+id/viewCantidad"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/viewPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_precio"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:labelFor="@+id/viewPrecio"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck"
        android:text="@string/moneda" />

    <TextView
        android:id="@+id/viewTienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_tienda"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtTienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewTienda"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar"
        android:textSize="24sp" />

</LinearLayout>