<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".crud.NuevoProducto"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/viewMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_marca" />

    <TextView
        android:id="@+id/txtMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/viewCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_cantidad" />

    <TextView
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/viewPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_precio" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txtPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:text="@string/moneda"
            android:layout_marginStart="2dp"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/viewTienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_tienda" />

    <TextView
        android:id="@+id/txtTienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/viewCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_categoria" />

    <TextView
        android:id="@+id/txtCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:columnCount="3">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/save"
            android:layout_gravity="center"
            tools:ignore="SpeakableTextPresentCheck"/>

        <Button
            android:id="@+id/fabEditar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/edit"
            android:layout_gravity="center"
            android:clickable="true"
            tools:ignore="SpeakableTextPresentCheck"/>

        <Button
            android:id="@+id/fabEliminar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/delete"
            android:layout_gravity="center"
            android:clickable="true"
            tools:ignore="SpeakableTextPresentCheck"/>

    </LinearLayout>

</LinearLayout>