<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

<!--    <Button-->
<!--        android:id="@+id/gestionCompra"-->
<!--        android:clickable="true"-->
<!--        android:text="@string/menu_lista_compra"-->
<!--        android:drawableStart="@drawable/carritocompra"-->
<!--        android:background="@color/green"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="24sp"-->
<!--        android:padding="10dp"-->
<!--        android:layout_margin="20dp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content" />-->

    <Button
        android:id="@+id/gestionProductos"
        android:clickable="true"
        android:text="@string/menu_lista_productos"
        android:drawableStart="@drawable/cesto"
        android:background="@color/pink"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/gestionLibros"
        android:clickable="true"
        android:text="@string/menu_lista_libros"
        android:drawableStart="@drawable/book"
        android:background="@color/orange"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/gestionJuegos"
        android:clickable="true"
        android:text="@string/menu_lista_juegos"
        android:drawableStart="@drawable/dados"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/gestionMultimedia"
        android:clickable="true"
        android:text="@string/menu_lista_multimedia"
        android:drawableStart="@drawable/multimedia"
        android:background="@color/yellow"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</TableLayout>