<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".crud.producto.NuevoProducto"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/tvFilmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_titulo" />

    <TextView
        android:id="@+id/filmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tvFilmDirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_director" />

    <TextView
        android:id="@+id/filmDirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvFilmYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_fecha_estreno" />

        <TextView
            android:id="@+id/filmYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFilmDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_min_duracion" />

        <TextView
            android:id="@+id/filmDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/min"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvFilmState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_estado" />

        <TextView
            android:id="@+id/filmState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:columnCount="3">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/save"
            android:layout_gravity="center"
            tools:ignore="SpeakableTextPresentCheck"/>

        <Button
            android:id="@+id/fabEditar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/edit"
            android:layout_gravity="center"
            android:clickable="true"
            tools:ignore="SpeakableTextPresentCheck"/>

        <Button
            android:id="@+id/fabEliminar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/delete"
            android:layout_gravity="center"
            android:clickable="true"
            tools:ignore="SpeakableTextPresentCheck"/>

    </LinearLayout>

</LinearLayout>