<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".crud.producto.NuevoProducto">

    <TextView
        android:id="@+id/tvFilmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oblig_title"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etFilmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@+id/tvFilmTitle"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvFilmDirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oblig_director"
        tools:ignore="SpeakableTextPresentCheck" />

    <AutoCompleteTextView
        android:id="@+id/etFilmDirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:completionThreshold="1"
        android:inputType="text"
        android:labelFor="@+id/tvFilmDirector"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvFilmYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_fecha_estreno"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etFilmYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="4"
        android:inputType="number"
        android:labelFor="@+id/tvFilmYear"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvFilmDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_min_duracion"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etFilmDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="number"
            android:labelFor="@+id/tvFilmDuration"
            android:textSize="24sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:text="@string/min"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvFilmState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_estado"
        tools:ignore="SpeakableTextPresentCheck" />

    <AutoCompleteTextView
        android:id="@+id/etFilmState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:completionThreshold="1"
        android:inputType="text"
        android:labelFor="@+id/tvFilmState"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/save"
            android:clickable="true"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/fabEditar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit"
            android:clickable="true"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/fabEliminar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/delete"
            android:clickable="true"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

</LinearLayout>