<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".crud.producto.NuevoProducto"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/tvBookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_titulo" />

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tvBookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_author" />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tvBookEditorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_editorial" />

    <TextView
        android:id="@+id/bookEditorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvBookGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_genero" />

    <TextView
        android:id="@+id/bookGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvBookIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_isbn" />

    <TextView
        android:id="@+id/bookIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvBookPrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/hint_impresion"/>

        <TextView
            android:id="@+id/bookPrintPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:text=", "
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/bookPrintYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:columnCount="3">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/save"
            android:layout_gravity="center"
            tools:ignore="SpeakableTextPresentCheck"/>

        <Button
            android:id="@+id/fabEditar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/edit"
            android:layout_gravity="center"
            android:clickable="true"
            tools:ignore="SpeakableTextPresentCheck"/>

        <Button
            android:id="@+id/fabEliminar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/delete"
            android:layout_gravity="center"
            android:clickable="true"
            tools:ignore="SpeakableTextPresentCheck"/>

    </LinearLayout>

</LinearLayout>