<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".NuevoProductoActivity">

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewNombre"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/viewCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_cantidad"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:labelFor="@+id/viewCantidad"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/viewPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_precio"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtPrecio"
            android:layout_weight="3.8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:labelFor="@+id/viewPrecio"
            android:textSize="24sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/moneda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:textAlignment="center"
            android:text="@string/moneda"
            android:textSize="24sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/viewTienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_tienda"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtTienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewTienda"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/save"
            android:clickable="true" />

        <Button
            android:id="@+id/fabEditar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit"
            android:clickable="true" />

        <Button
            android:id="@+id/fabEliminar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/delete"
            android:clickable="true" />

    </LinearLayout>

</LinearLayout>